# java_native_gl2

./: .gitignore  README.md  gradlew  local.properties
.google/: packaging.yaml
app/: build.gradle
app/src/main/cpp/: CMakeLists.txt  gl_code.cpp
app/src/main/cpp/Common/: esTransform.c  esUtil.c
app/src/main/java/com/android/gl2jni/: GL2JNIView.java
app/src/main/res/values/: strings.xml
